# ollama-rust

./: .gitignore  Cargo.toml  README.md  install.sh
install/: android.sh
public/: style.css
src/: app.rs  lib.rs  main.rs
static/: index.html  script.js  style.css
